# opencode

./: .gitignore  AGENTS.md  README.md  crush.json  opencode.json  package-lock.json  package.json  testing-max-check-results.csv  tools.md
agentic-tools-mcp/: .gitignore  README.md  pyproject.toml
agentic-tools-mcp/agentic_tools_mcp/: __init__.py  env_loader.py  live_probe.py  server_factory.py  smoke_test.py
agentic-tools-mcp/agentic_tools_mcp/servers/: __init__.py  ashby.py  gem.py  harmonic.py  metaview.py
agentic-tools-mcp/scripts/: bootstrap_local_env.sh
agentic-tools-mcp/tests/: test_env_loader.py  test_server_factory.py
scripts/: run_mcp_live_probe.sh  run_mcp_smoke.sh
